add week 3 day 5 code and update readme

--- a/WebSection/practice/exercises/linkStyle.css
+++ b/WebSection/practice/exercises/linkStyle.css
@@ -16,4 +16,7 @@ a:hover{
     background-color: tomato;
 }
 
-/* Active (used in navigation) */
+/* Active (most used in navigation) */
+a:active{
+    
+}
