update the portfolio vertical sidebar

--- a/WebSection/MyPortfolio/css/portfolio.css
+++ b/WebSection/MyPortfolio/css/portfolio.css
@@ -1,65 +1,193 @@
 body {
-  font-family: "Lato", sans-serif;
+    margin: 0;
+    font-family: "Lato", sans-serif;
 }
 
-.sidenav {
-  height: 100%;
-  width: 200px;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  padding-top: 20px;
+.sidebar {
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+    position: fixed;
+    height: 100%;
+    overflow: auto;
 }
+
+
+/* .sidebar a {
+    display: block;
+    color: black;
+    padding: 16px;
+    text-decoration: none;
+} */
+
+
+/* .sidebar a.active {
+    background-color: #04AA6D;
+    color: white;
+}
+
+.sidebar a:hover:not(.active) {
+    background-color: #555;
+    color: white;
+} */
 
 .sidenav-bottom {
-  height: 100%;
-  width: 200px;
-  position: fixed;
-  z-index: 1;
-  top: 80%;
-  left: 0;
-  /* background-color: rgb(243, 22, 22); */
-  overflow-x: hidden;
-  padding-top: 20px;
-  text-align: center;
+    height: 100%;
+    width: 200px;
+    position: fixed;
+    z-index: 1;
+    top: 80%;
+    left: 0;
+    /* background-color: rgb(243, 22, 22); */
+    overflow-x: hidden;
+    padding-top: 20px;
+    text-align: center;
 }
-
-.sidenav a {
-  padding: 6px 6px 6px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  /* text-align: center; */
-}
-
 
 .sidenav-bottom img {
-  width: 50px;
-  height: 50px;
-  background-color: #0c71cf;
-  border-radius: 50%;
-  margin-right: 20px;
+    width: 50px;
+    height: 50px;
+    background-color: #0c71cf;
+    border-radius: 50%;
+    margin-right: 20px;
+    /* text-align: center; */
 }
 
-.sidenav a:hover {
-  color: #f1f1f1;
+div.content {
+    background: url(../images/hacker.webp) center;
+    background-repeat: no-repeat;
+    border-image: red solid 2px;
+    margin-left: 200px;
+    padding: 1px 16px;
+    height: 1300px;
+    max-height: max-content;
+    background-size: 80% auto;
+    background-color: black;
+    color: white;
 }
 
-.main {
-  margin-left: 200px; /* Same as the width of the sidenav */
+img#icon {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    /* border: 1px solid rgb(255, 0, 0); */
+    opacity: 0.5;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+
+/* sub nav */
+
+
+/* CSS universal selectors */
+
+.nav-area * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-div:target{
-  border: 2px solid blue;
-  color:brown;
-  background-color: cyan;
+.nav-area input[type="radio"] {
+    display: none;
+}
+
+li,
+label,
+ul,
+a.main-section {
+    width: 100%;
+    color: blue;
+    display: block;
+    font-weight: bold;
+    text-align: left;
+    /* padding-left: 80px; */
+    /* border-style: solid; */
+}
+
+.nav-area ul li {
+    height: 40px;
+    overflow: hidden;
+    transition: all .3s;
+    display: block;
+    /* background-color: rgb(88, 81, 179); */
+}
+
+.nav-area label,
+.main-section {
+    font-size: 20px;
+    /* background: #219e27b4; */
+    padding: 10px 15px;
+    cursor: pointer;
+    transition: all .25s;
+    /* background-color: rgb(7, 197, 255); */
+}
+
+.main-section {
+    text-decoration: none;
+}
+
+
+/* label>a { */
+
+
+/* text-decoration: none; */
+
+
+/* display: block; */
+
+
+/* padding: 8px 25px; */
+
+
+/* } */
+
+.nav-area>ul>li>a {
+    font-size: 15px;
+    text-decoration: none;
+    color: black;
+    display: block;
+    padding: 8px 25px;
+    transition: all .25s;
+}
+
+.nav-area>ul>li>a:hover,
+.main-section:hover {
+    background-color: gray;
+    /* height: 100px; */
+    /* text-decoration: none; */
+}
+
+.nav-area input[type="radio"] {
+    display: none;
+}
+
+#about:checked+li,
+#services:checked+li,
+#portfolio:checked+li {
+    height: auto;
+    /* width: 100%; */
+}
+
+@media screen and (max-width: 700px) {
+    .sidebar {
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+    .sidebar a {
+        float: left;
+    }
+    div.content {
+        margin-left: 0;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .sidebar a {
+        text-align: center;
+        float: none;
+    }
 }
