--- a/WebSection/MyPortfolio/css/portfolio.css
+++ b/WebSection/MyPortfolio/css/portfolio.css
@@ -1,5 +1,7 @@
+html,
 body {
     margin: 0;
+    height: 100%;
     font-family: "Lato", sans-serif;
 }
 
@@ -132,43 +134,44 @@ a.main-section {
 }
 
 
-/* right content section */
+/* -------------------------- right content section -------------------------- */
 
 div.content {
     margin-left: 200px;
-    padding: 1px 16px;
-    height: 1300px;
+    /* padding: 1px 16px; */
+    /* height: 1300px; */
     /* max-height: max-content; */
     /* background-size: 80% auto; */
     /* background-color: black; */
     /* color: white; */
 }
 
-div.content #home {
-    background: url(../images/hacker.webp) center top;
-    background-repeat: no-repeat;
+div.content>#home {
+    background: url(../images/hacker.webp) no-repeat center;
+    /* background-size: auto; */
     /* border-image: red solid 2px; */
     /* padding: 1px 16px; */
     /* height: 1300px; */
     /* max-height: max-content; */
     /* background-size: 80% auto; */
-    /* /* background-color: black; */
     /* color: white; */
-    background-color: black;
+    background-size: 100% 100%;
+    height: 100vh;
+    background-position: center center;
 }
 
 .main {
     position: realtive;
     border: solid rgb(89, 0, 255);
-    background-color: silver;
-    height: 100%;
-    width: 105%;
+    background-color: white;
+    /* height: 100%;
+    width: 100%; */
 }
 
 .main p#name {
     /* max-width: 200px; */
     /* width: 60%; */
-    margin-top: 800px;
+    margin-top: 70vh;
     margin-bottom: 0px;
     /* padding-right: 100px; */
     text-align: center;
@@ -177,18 +180,26 @@ div.content #home {
     color: white;
     /* border: 1px solid #fcfc02; */
     /* padding-top: 20px; */
-    font-size: 100px;
-    /* float: center; */
+    font-size: 4vw;
+    float: center;
     /* position: fixed; */
+    display: block;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .main p#jobTitle {
     color: white;
-    font-size: 40px;
+    font-size: 2vw;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     /* border: 1px solid #fcfc02; */
+}
+
+#contactMe>h2>span {
+    display: inline-block;
+    border-bottom: 3px solid black;
+    padding-bottom: 15px;
+    /* color: blue; */
 }
 
 
@@ -218,11 +229,37 @@ div:target {
     div.content {
         margin-left: 0;
     }
+    div.content>#home {
+        background-size: 400px;
+        height: 50vh;
+    }
+    .main p#name {
+        /* max-width: 200px; */
+        /* width: 60%; */
+        margin-top: 40%;
+        margin-bottom: 0px;
+        /* padding-right: 100px; */
+        text-align: center;
+        /* margin: 2px; */
+        /* display: block; */
+        color: white;
+        /* border: 1px solid #fcfc02; */
+        /* padding-top: 20px; */
+        font-size: 10px;
+        float: center;
+        /* position: fixed; */
+        display: block;
+        font-family: Arial, Helvetica, sans-serif;
+    }
 }
 
-@media screen and (max-width: 400px) {
+
+/* @media screen and (max-width: 400px) {
     .sidebar a {
         text-align: center;
         float: none;
     }
-}
+    div.content>#home {
+        height: 50vh;
+    }
+} */
