redirect resume to resume link

--- a/WebSection/MyPortfolio/css/portfolio.css
+++ b/WebSection/MyPortfolio/css/portfolio.css
@@ -203,6 +203,17 @@ div.content>#home {
 }
 
 
+/* div#resume {
+    height: 97vh; */
+
+
+/* width: 80vw;  */
+
+
+/* margin: 0;
+} */
+
+
 /* TODO */
 
 
