--- a/WebSection/MyPortfolio/css/portfolio.css
+++ b/WebSection/MyPortfolio/css/portfolio.css
@@ -147,7 +147,7 @@ div.content {
 }
 
 div.content>#home {
-    background: url(../images/hacker.webp) no-repeat center;
+    background: url(../images/hacker.jpg) no-repeat center;
     /* background-size: auto; */
     /* border-image: red solid 2px; */
     /* padding: 1px 16px; */
@@ -271,7 +271,7 @@ div:target {
 }
 
 .project-pic {
-    width: 65%;
+    width: 100%;
     height: 60%;
     /* width: 400px;
     height: 60px; */
@@ -279,6 +279,10 @@ div:target {
 
 .project-container p {
     padding: 0.4rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
 }
 
 .project-title {
@@ -290,12 +294,25 @@ div:target {
 }
 
 .project-card {
-    background-color: white;
+    /* background-color: white;
     border-radius: 11px;
     box-shadow: 0 3px 10px var(--primary-shadow);
     padding: 20px;
-    margin: 10px;
+    margin: 10px; */
     /* width: 40%; */
+}
+
+.wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
+}
+
+.wrapper>div {
+    background-color: #0c71cf;
+    padding: 2px 2px;
+    border-radius: 10px;
 }
 
 
