add dummy cards for java and web section

--- a/WebSection/MyPortfolio/css/portfolio.css
+++ b/WebSection/MyPortfolio/css/portfolio.css
@@ -228,6 +228,50 @@ div:target {
     background-color: cyan;
 }
 
+
+/* .projects {
+    background-color: var(--bg-color);
+    margin-top: 2rem;
+} */
+
+.project-pic {
+    width: 100%;
+    height: 400px;
+}
+
+
+/* .project-container p {
+    padding: 0.4rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
+} */
+
+.wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
+}
+
+.wrapper>div {
+    background-color: #8c9497;
+    padding: 2px 2px;
+    border-radius: 10px;
+}
+
+
+/* @media screen and (max-width: 400px) {
+    .sidebar a {
+        text-align: center;
+        float: none;
+    }
+    div.content>#home {
+        height: 50vh;
+    }
+} */
+
 @media screen and (max-width: 700px) {
     .sidebar {
         width: 100%;
@@ -263,65 +307,3 @@ div:target {
         font-family: Arial, Helvetica, sans-serif;
     }
 }
-
-.projects {
-    background-color: var(--bg-color);
-    /* padding: 32px 0; */
-    margin-top: 2rem;
-}
-
-.project-pic {
-    width: 100%;
-    height: 60%;
-    /* width: 400px;
-    height: 60px; */
-}
-
-.project-container p {
-    padding: 0.4rem;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-    grid-auto-rows: minmax(100px, auto);
-}
-
-.project-title {
-    margin-bottom: var(--bottom-margin);
-}
-
-.project-details {
-    margin-bottom: var(--bottom-margin);
-}
-
-.project-card {
-    /* background-color: white;
-    border-radius: 11px;
-    box-shadow: 0 3px 10px var(--primary-shadow);
-    padding: 20px;
-    margin: 10px; */
-    /* width: 40%; */
-}
-
-.wrapper {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-    grid-auto-rows: minmax(100px, auto);
-}
-
-.wrapper>div {
-    background-color: #0c71cf;
-    padding: 2px 2px;
-    border-radius: 10px;
-}
-
-
-/* @media screen and (max-width: 400px) {
-    .sidebar a {
-        text-align: center;
-        float: none;
-    }
-    div.content>#home {
-        height: 50vh;
-    }
-} */
