--- a/WebSection/MyPortfolio/css/portfolio.css
+++ b/WebSection/MyPortfolio/css/portfolio.css
@@ -197,6 +197,10 @@ div.content>#home {
     /* border: 1px solid #fcfc02; */
 }
 
+#java-project>h2>span,
+#java-problems>h2>span,
+#web-project>h2>span,
+#web-practice>h2>span,
 #contactMe>h2>span {
     display: inline-block;
     border-bottom: 3px solid black;
@@ -240,6 +244,7 @@ div.content>#home {
 .project-pic {
     width: 100%;
     height: 400px;
+    border-radius: 10px;
 }
 
 
