--- a/WebSection/MyPortfolio/css/portfolio.css
+++ b/WebSection/MyPortfolio/css/portfolio.css
@@ -160,7 +160,7 @@ div.content>#home {
     background-position: center center;
 }
 
-.main {
+.content-section {
     position: realtive;
     /* border: solid rgb(255, 166, 0); */
     border: white solid;
@@ -170,7 +170,7 @@ div.content>#home {
     width: 100%; */
 }
 
-.main p#name {
+.content-section p#name {
     /* max-width: 200px; */
     /* width: 60%; */
     margin-top: 70vh;
@@ -189,7 +189,7 @@ div.content>#home {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.main p#jobTitle {
+.content-section p#jobTitle {
     color: white;
     font-size: 2vw;
     font-family: Arial, Helvetica, sans-serif;
@@ -296,7 +296,7 @@ div.content>#home {
         background-size: 400px;
         height: 50vh;
     }
-    .main p#name {
+    .content-section p#name {
         /* max-width: 200px; */
         /* width: 60%; */
         margin-top: 40%;
