parent component send message to child component

--- a/WebSection/Angular/Demo/src/app/app.component.html
+++ b/WebSection/Angular/Demo/src/app/app.component.html
@@ -6,8 +6,9 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+<p>This is the app component</p>
 
-<app-test></app-test>
+<app-test [dataFromParent]="message"></app-test>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
