add week 5 day 5 web section code
use services for dependency injection (for components)

--- a/WebSection/Angular/Demo/src/app/app.component.html
+++ b/WebSection/Angular/Demo/src/app/app.component.html
@@ -9,7 +9,8 @@
 <p>This is the app component</p>
 <p>This is the message from child component <span style="color:red">{{msg}}</span></p>
 <app-test (childEvent)="msg=$event" [dataFromParent]="message"></app-test>
-
+<hr>
+<app-car-display></app-car-display>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
