--- a/WebSection/Angular/NeedForService/src/app/app.component.html
+++ b/WebSection/Angular/NeedForService/src/app/app.component.html
@@ -6,8 +6,13 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+<hr>
 <app-employee></app-employee>
+<hr>
 <app-emp-dept></app-emp-dept>
+<hr>
+<app-emp-id></app-emp-id>
+<hr>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
