--- a/WebSection/Angular/NeedForService/src/app/emp-dept/emp-dept.component.html
+++ b/WebSection/Angular/NeedForService/src/app/emp-dept/emp-dept.component.html
@@ -1,5 +1,5 @@
 <p>emp-dept works!</p>
-<h2>Name of employees are:</h2>
+<h2>Name and depart of employees <span>collected from service</span> are:</h2>
 <ul *ngFor="let person of emp">
-  <li>{{person.dep}}</li>
+  <li>{{person.name}} - {{person.dep}}</li>
 </ul>
