--- a/WebSection/Angular/NeedForService/src/app/employee/employee.component.html
+++ b/WebSection/Angular/NeedForService/src/app/employee/employee.component.html
@@ -1,5 +1,6 @@
 <p>employee works!</p>
-<h2>Name of employees are:</h2>
+<h2>Name of employees collected from <span>service</span> are:</h2>
 <ul *ngFor="let person of emp">
-  <li>{{person.name}}</li>
+  <!-- <li>{{person.id}} - {{person.name}} - {{person.dep}}</li> -->
+  <li>{{toString(person)}}</li>
 </ul>
