add routerLink for other view pages

--- a/WebSection/Angular/app-routing/src/app/app.component.html
+++ b/WebSection/Angular/app-routing/src/app/app.component.html
@@ -1,3 +1,10 @@
 <p>This is the routing project</p>
 
+<div>
+  <nav>
+    <a routerLink="/food">Food List</a><br>
+    <a routerLink="/electonics">Electronics List</a>
+  </nav>
+</div>
+
 <router-outlet></router-outlet>
