child component get data from base component by using services
services set up

--- a/WebSection/Angular/app-routing/src/app/app.component.html
+++ b/WebSection/Angular/app-routing/src/app/app.component.html
@@ -3,7 +3,7 @@
 <div>
   <nav>
     <a routerLink="/food">Food List</a><br>
-    <a routerLink="/electonics">Electronics List</a>
+    <a routerLink="/electronics">Electronics List</a>
   </nav>
 </div>
 
