--- a/WebSection/Angular/AngularForms/src/app/app.component.html
+++ b/WebSection/Angular/AngularForms/src/app/app.component.html
@@ -1,3 +1,62 @@
-<p>This is app component</p>
-<button class="btn btn-primary">Click me</button>
+<div class="center">
+  <div>
+    <p>This is app component</p>
+    <button class="btn btn-primary center">Click me</button>
+  </div>
+
+  <h1>Angular Form</h1>
+  <!-- store as a variable->userForm -->
+  <form #userForm="ngForm">
+    {{userForm.value | json}}
+    <div class="form-group">
+      <label>Name:</label>
+      <input type="text" name="name" class="form-control" ngModel>
+    </div>
+    <div class="form-group">
+      <label>Email:</label>
+      <input type="email" name="email" class="form-control" ngModel>
+    </div>
+    <div class="form-group">
+      <label>Mobile No:</label>
+      <input type="num" name="mobile" class="form-control" ngModel>
+    </div>
+    <div class="form-group">
+      <select class="custom-select" name="country" ngModel>
+        <option selected>Choose your country</option>
+        <option *ngFor="let city of cities">{{city}}</option>
+      </select>
+    </div>
+    <div ngModelGroup="jobRole">
+      <div class="form-group">
+        <label>Role</label>
+        <input type="text" class="form-control" name="role" ngModel>
+      </div>
+      <div class="form-group">
+        <label>Department</label>
+        <input type="text" class="form-control" name="dept" ngModel>
+      </div>
+      <div class="form-group">
+        <label>Company</label>
+        <input type="text" class="form-control" name="company" ngModel>
+      </div>
+    </div>
+    <br>
+
+    <div class="form-group">
+      <label>Gender:</label>
+      <input type="radio" name="gender" value="male" class="form-check-input" ngModel>
+      <label class="form-check-label">Male</label>
+      <input type="radio" name="gender" value="female" class="form-check-input" ngModel>
+      <label class="form-check-label">Female</label>
+    </div>
+    <br>
+    <div class="form-grouop">
+      <input class="form-check-input" name="check" type="checkbox" ngModel>
+      <label class="form-check-label">Yes, I confirm all my details are true</label>
+    </div>
+    <!-- btn btn-primary -->
+    <button class="btn btn-primary" type="submit">Submit Form</button>
+    <br>
+  </form>
+</div>
 <router-outlet></router-outlet>
