--- a/WebSection/Angular/AngularForms/src/app/app.component.html
+++ b/WebSection/Angular/AngularForms/src/app/app.component.html
@@ -8,25 +8,27 @@
   <!-- store as a variable->userForm -->
   <form #userForm="ngForm">
     {{userForm.value | json}}
+    <hr>
+    {{userData | json}}
     <div class="form-group">
       <label>Name:</label>
-      <input type="text" name="name" class="form-control" ngModel>
+      <input type="text" name="name" class="form-control" [ngModel]="userData.name">
     </div>
     <div class="form-group">
       <label>Email:</label>
-      <input type="email" name="email" class="form-control" ngModel>
+      <input type="email" name="email" class="form-control" [ngModel]="userData.email">
     </div>
     <div class="form-group">
       <label>Mobile No:</label>
-      <input type="num" name="mobile" class="form-control" ngModel>
+      <input type="num" name="mobile" class="form-control" [ngModel]="userData.mobile">
     </div>
     <div class="form-group">
-      <select class="custom-select" name="country" ngModel>
+      <select class="custom-select" name="country" [ngModel]="userData.country">
         <option selected>Choose your country</option>
         <option *ngFor="let city of cities">{{city}}</option>
       </select>
     </div>
-    <div ngModelGroup="jobRole">
+    <!-- <div ngModelGroup="jobRole">
       <div class="form-group">
         <label>Role</label>
         <input type="text" class="form-control" name="role" ngModel>
@@ -39,19 +41,19 @@
         <label>Company</label>
         <input type="text" class="form-control" name="company" ngModel>
       </div>
-    </div>
+    </div> -->
     <br>
 
     <div class="form-group">
       <label>Gender:</label>
-      <input type="radio" name="gender" value="male" class="form-check-input" ngModel>
+      <input type="radio" name="gender" value="male" class="form-check-input" [ngModel]="userData.gender">
       <label class="form-check-label">Male</label>
-      <input type="radio" name="gender" value="female" class="form-check-input" ngModel>
+      <input type="radio" name="gender" value="female" class="form-check-input" [ngModel]="userData.gender">
       <label class="form-check-label">Female</label>
     </div>
     <br>
     <div class="form-grouop">
-      <input class="form-check-input" name="check" type="checkbox" ngModel>
+      <input class="form-check-input" name="check" type="checkbox" [ngModel]="userData.check">
       <label class="form-check-label">Yes, I confirm all my details are true</label>
     </div>
     <!-- btn btn-primary -->
