--- a/WebSection/Angular/AngularForms/src/app/app.component.html
+++ b/WebSection/Angular/AngularForms/src/app/app.component.html
@@ -2,32 +2,40 @@
   <div>
     <p>This is app component</p>
     <button class="btn btn-primary center">Click me</button>
+    <h1>Angular Form</h1>
+
   </div>
 
-  <h1>Angular Form</h1>
   <!-- store as a variable->userForm -->
   <form #userForm="ngForm">
-    {{userForm.value | json}}
+    <!-- {{userForm.value | json}}
     <hr>
-    {{userData | json}}
+    {{userData | json}} -->
     <div class="form-group">
       <label>Name:</label>
-      <input type="text" name="name" class="form-control" [(ngModel)]="userData.name">
+      <input type="text" name="name" #name class="form-control" [(ngModel)]="userData.name" required>
     </div>
+    {{name.className}}<br><br>
     <div class="form-group">
       <label>Email:</label>
-      <input type="email" name="email" class="form-control" [(ngModel)]="userData.email">
+      <input type="email" name="email" #email class="form-control" [(ngModel)]="userData.email">
     </div>
+    {{email.className}}<br><br>
+
     <div class="form-group">
       <label>Mobile No:</label>
-      <input type="num" name="mobile" class="form-control" [(ngModel)]="userData.mobile">
+      <input type="number" name="mobile" #mobile class="form-control" [(ngModel)]="userData.mobile" required="">
     </div>
+    {{mobile.className}}<br><br>
+
     <div class="form-group">
-      <select class="custom-select" name="country" [(ngModel)]="userData.country">
+      <select class="custom-select" name="country" #country [(ngModel)]="userData.country">
         <option selected>Choose your country</option>
         <option *ngFor="let city of cities">{{city}}</option>
       </select>
     </div>
+    {{country.className}}<br><br>
+
     <!-- <div ngModelGroup="jobRole">
       <div class="form-group">
         <label>Role</label>
@@ -46,10 +54,14 @@
 
     <div class="form-group">
       <label>Gender:</label>
-      <input type="radio" name="gender" value="male" class="form-check-input" [(ngModel)]="userData.gender">
+      <input type="radio" name="gender" value="male" #gender class="form-check-input" [(ngModel)]="userData.gender">
       <label class="form-check-label">Male</label>
-      <input type="radio" name="gender" value="female" class="form-check-input" [(ngModel)]="userData.gender">
+      {{gender.className}}
+
+      <input type="radio" name="gender" value="female" #gender class="form-check-input" [(ngModel)]="userData.gender">
       <label class="form-check-label">Female</label>
+      {{gender.className}}
+
     </div>
     <br>
     <div class="form-grouop">
