--- a/WebSection/Angular/AngularForms/src/app/app.component.html
+++ b/WebSection/Angular/AngularForms/src/app/app.component.html
@@ -13,18 +13,22 @@
     {{userData | json}} -->
     <div class="form-group">
       <label>Name:</label>
-      <input type="text" name="name" #name class="form-control" [(ngModel)]="userData.name" required>
+
+      <!-- <input type="text" name="name" #name class="form-control is-invalid" [(ngModel)]="userData.name" required> -->
+      <input type="text" name="name" #name class="form-control" [class.is-invalid]="!name.checkValidity()"
+        [class.is-valid]="name.checkValidity()" [(ngModel)]="userData.name" required>
     </div>
-    {{name.className}}<br><br>
+    {{name.className}}
+    {{name.checkValidity()}}<br><br>
     <div class="form-group">
       <label>Email:</label>
-      <input type="email" name="email" #email class="form-control" [(ngModel)]="userData.email">
+      <input type="email" name="email" #email class="form-control" [class.is-invalid]="!email.checkValidity()" [class.is-valid]="email.checkValidity()" [(ngModel)]="userData.email">
     </div>
     {{email.className}}<br><br>
 
     <div class="form-group">
       <label>Mobile No:</label>
-      <input type="number" name="mobile" #mobile class="form-control" [(ngModel)]="userData.mobile" required="">
+      <input type="number" name="mobile" #mobile class="form-control" [class.is-invalid]="!mobile.checkValidity()" [class.is-valid]="mobile.checkValidity()" [(ngModel)]="userData.mobile">
     </div>
     {{mobile.className}}<br><br>
 
